2008-08-14  Ludovic Courtès  <ludo@gnu.org>

	* configure.in: Remove incorrect and pointless
	`AC_CONFIG_MACRO_DIR' invocation.  Reported as Gentoo bug
	#220339.

2008-08-07  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in (SCM_I_GSC_STACK_GROWS_UP): Remove use of
	AC_CACHE_CHECK, which was inadvertently causing
	SCM_I_GSC_STACK_GROWS_UP _always_ to be 0.

2008-07-17  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in: Update stack direction test to be like that in
        Autoconf _AC_LIBOBJ_ALLOCA and Gnulib; specifically in involving a
        function calling itself.

2008-07-16  Ludovic Courtès  <ludo@gnu.org>

	* configure.in: Look for `struct dirent64' and `readdir64_r ()',
	not available on HP-UX 11.11.

2008-07-06  Ludovic Courtès  <ludo@gnu.org>

	* configure.in: Update to Autoconf 2.61.

2008-06-28  Ludovic Courtès  <ludo@gnu.org>

	* configure.in: Use Automake with `-Wall -Wno-override'.

2008-05-07  Ludovic Courtès  <ludo@gnu.org>

	Guile 1.8.5 released.

	* GUILE-VERSION (LIBGUILE_INTERFACE_CURRENT): Increment due to
	the addition of an inlined version of `scm getc ()' and friends.
	(LIBGUILE_INTERFACE_AGE): Increment.
	(LIBGUILE_INTERFACE_REVISION): Zeroed.
	(LIBGUILE_SRFI_SRFI_1_INTERFACE_REVISION): Increment.

2008-05-04  Ludovic Courtès  <ludo@gnu.org>

	Add `pkg-config' support.  Suggested by Aaron VanDevender, Greg
	Troxel, and others.

	* configure.in: Substitute `sitedir', produce `guile-1.8.pc'.
	* Makefile.am (EXTRA_DIST): Add `guile-1.8.pc.in'.
	(pkgconfigdir, pkgconfig_DATA): New.

2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* configure.in (BUILD_PTHREAD_SUPPORT): New Automake
	conditional.

2008-04-26  Ludovic Courtès  <ludo@gnu.org>

	* Makefile.am (EXTRA_DIST): Remove `ANON-CVS' and `SNAPSHOTS'.

2008-03-12  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in (AC_CONFIG_FILES): Add emacs/Makefile and
	ice-9/debugging/Makefile.

	* Makefile.am (SUBDIRS): Add emacs.

2008-02-23  Neil Jerram  <neil@ossau.uklinux.net>
