@@ -73,9 +73,7 @@ AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_AWK
 
-AC_AIX
-AC_ISC_POSIX
-AC_MINIX
+AC_USE_SYSTEM_EXTENSIONS
 
 AC_PROG_CC_C89
 
