@@ -1,3 +1,11 @@
+2008-08-20  Ludovic Courtès  <ludo@gnu.org>
+
+	* configure.in: Use `AC_USE_SYSTEM_EXTENSIONS' instead of the
+	obsolete `AC_AIX', `AC_ISC_POSIX' and `AC_MINIX'.  As a side
+	effect, this will define `_POSIX_PTHREAD_SEMANTICS' on Solaris,
+	which provides a standard-conforming version of `readdir_r ()'
+	for instance; it also allows the use of Autoconf 2.62.
+
 2008-08-14  Ludovic Courtès  <ludo@gnu.org>
 
 	* configure.in: Remove incorrect and pointless
